<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/light_blue">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:layout_marginStart="@dimen/mid_margin"
        android:layout_marginEnd="@dimen/mid_margin"
        app:cornerRadius="25dp"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="5dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/button_media_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/mid_margin"
        android:layout_marginStart="@dimen/mid_margin"
        android:layout_marginEnd="@dimen/mid_margin"
        app:cornerRadius="25dp"
        android:backgroundTint="@color/white"
        android:text="@string/media_library"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:icon="@drawable/ic_media_library"
        app:iconGravity="textStart"
        app:iconPadding="5dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_search"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/mid_margin"
        android:layout_marginStart="@dimen/mid_margin"
        android:layout_marginEnd="@dimen/mid_margin"
        android:layout_marginBottom="@dimen/mid_margin"
        app:cornerRadius="25dp"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="5dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_media_library"
        android:foreground="?attr/selectableItemBackground"/>

</LinearLayout>